{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "player",
            "id": "d563844b-5b04-4dd8-af2b-98699229c4f6",
            "actions": [
                {
                    "name": "hotbar1",
                    "type": "PassThrough",
                    "id": "dfb26098-6ace-4244-bfad-88af7e31d3f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hotbar2",
                    "type": "PassThrough",
                    "id": "0154bcfb-946e-4055-b00e-7f17cee0e583",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hotbar3",
                    "type": "PassThrough",
                    "id": "98581ea7-cda5-493c-96b0-94dd1c9df26e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hotbar4",
                    "type": "PassThrough",
                    "id": "1ad22f6c-49f0-46ab-b6f0-914df8c4b755",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hotbar5",
                    "type": "PassThrough",
                    "id": "5e85896b-ba4a-4980-9f6b-72287d6b9a32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hotbar6",
                    "type": "PassThrough",
                    "id": "e311cea7-d522-4269-8355-9d8dc9d3ec9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hotbar7",
                    "type": "PassThrough",
                    "id": "853c4b38-1421-4d63-adbc-2427fbb3bd74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hotbar8",
                    "type": "PassThrough",
                    "id": "6d7e07d9-c889-428a-8154-deaac8d03e35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hotbar9",
                    "type": "PassThrough",
                    "id": "a4b1f097-be3f-4973-a3e2-a874f200d42f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "mousewheel",
                    "type": "PassThrough",
                    "id": "fe8d5421-0802-45cc-858e-416bb075dad6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "useitem",
                    "type": "Button",
                    "id": "954efae5-8e4e-4e5c-93ac-542d8f081d9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2595c512-6867-4c16-9d1c-f186c8197740",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "hotbar1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "512997fe-ef2a-4451-b1f9-d51994ac57b8",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "hotbar2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "155b5d56-3faa-4f36-bee0-a723fe30c855",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "hotbar3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e6349ab-48a5-49f0-8a75-e79aa5992fc2",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "hotbar4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f5c733d-6283-4733-bda2-add051c5bc9c",
                    "path": "<Keyboard>/5",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "hotbar5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1a6f6e7-a2f9-431f-b893-ff2619350dac",
                    "path": "<Keyboard>/6",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "hotbar6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c70fb6d-0ecb-46f1-ad51-d517c698b087",
                    "path": "<Keyboard>/7",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "hotbar7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82817f45-e390-480c-8819-5477aa1cc95b",
                    "path": "<Keyboard>/8",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "hotbar8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "108d7e5f-931e-4919-b3a1-e2cd4322aeeb",
                    "path": "<Keyboard>/9",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "hotbar9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25c360ef-0e56-41d5-8dd6-2dff3bb4d6e2",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mousewheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "716aa026-3e56-47ad-a0a7-48806e4fdb91",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "useitem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}